--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Кухонные гарнитуры в Алматы</title>
-	<meta name="description" content="Кухонные гарнитуры в Алматы">
+	<title>Интернет-маркетолог - Ерсултан Зада</title>
+	<meta name="description" content="Обо мне, мои работы, отзывы">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
@@ -49,18 +49,18 @@
 					<img src="img/me3.jpg" alt="">
 				</div>
 			</div>
-			<div class="col-lg-6 align-self-lg-center">
+			<div class="col-lg-6 align-self-lg-center mt-4 mt-lg-0">
 				<div class="about-primaryText">
-					Я Сеан, дизайнер продуктов, удаленно работающий с Help Scout над их мобильными продуктами в солнечном Дублине, Ирландия.
+					Привет, меня зовут Ерсултан и я Интернет-маркетолог в свободном плавании, ищущий отважную компанию, чтобы реализовать ее потенциал на все 200%.
 				</div>
 				<div class="about-text">
-					Последние 12 с лишним лет я работал в различных областях цифрового дизайна; интерфейсная разработка, дизайн электронной почты, страницы маркетинговых сайтов, UI / UX приложений, до моей текущей роли в разработке продуктов для мобильных платформ.
+					Начинал свою карьеру в качестве разработчика сайтов. Последние 5 лет занимаюсь интернет-маркетингом, по прежнему делаю сайты, но уже так, чтобы они максимально продавали.
 				</div>
 				<div class="about-text">
-					Сейчас я трачу время на исследования, проектирование, создание прототипов и кодирование. Я также помогаю дизайнерам начать свою карьеру.
+					Всегда слежу за трендами и ищу новые инструменты, чтобы заявка обходилась как можно дешевле. Ведь цена заявки растет с каждым годом.
 				</div>
 				<div class="about-text">
-					Вне офиса вы обнаружите, что я мечтаю о футболе, играю на бас-гитаре и гладлю всех хороших собак.
+					Прекрасный муж и отец. С детства занимаюсь спортом. Без вредных привычек.
 				</div>
 			</div>
 		</div>
@@ -213,6 +213,12 @@
 				</div>
 				<div class="skill-item">
 					<div class="seo"><span>SEO-оптимизация сайта</span><span>95%</span></div>
+				</div>
+				<div class="skill-item">
+					<div class="crm"><span>Настройка CRM</span><span>100%</span></div>
+				</div>
+				<div class="skill-item">
+					<div class="bot"><span>Настройка Чат-ботов</span><span>100%</span></div>
 				</div>
 				<div class="skill-item">
 					<div class="creo"><span>Креативность</span><span>100%</span></div>
