--- a/contacts.html
+++ b/contacts.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Кухонные гарнитуры в Алматы</title>
-	<meta name="description" content="Кухонные гарнитуры в Алматы">
+	<title>Интернет-маркетолог - Ерсултан Зада</title>
+	<meta name="description" content="Обо мне, мои работы, отзывы">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
@@ -49,9 +49,9 @@
 				<div class="contacts-block">
 					<div class="block-item">
 						<a href="tel:87759115078"><i class="fas fa-phone"></i></a>
-						<a href="#"><i class="fab fa-whatsapp-square"></i></a>
-						<a href="#"><i class="fab fa-telegram"></i></a>
-						<span>+7 775 911 50 78</span>
+						<a href="https://wa.me/77759115078" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
+						<a href="https://t.me/yersultan_zada" target="_blank"><i class="fab fa-telegram"></i></a>
+						<a href="tel:87759115078">+7 775 911 50 78</a>
 					</div>
 					<div class="block-item">
 						<a href="mailto:yersultan.zada@gmail.com"><i class="fas fa-envelope mr-2"></i>yersultan.zada@gmail.com</a>
