--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Кухонные гарнитуры в Алматы</title>
-    <meta name="description" content="Кухонные гарнитуры в Алматы">
+    <title>Интернет-маркетолог - Ерсултан Зада</title>
+    <meta name="description" content="Обо мне, мои работы, отзывы">
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="expires" content="0">
     <meta http-equiv="pragma" content="no-cache">
