--- a/reviews.html
+++ b/reviews.html
@@ -4,19 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Кухонные гарнитуры в Алматы</title>
-	<meta name="description" content="Кухонные гарнитуры в Алматы">
+	<title>Интернет-маркетолог - Ерсултан Зада</title>
+	<meta name="description" content="Обо мне, мои работы, отзывы">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="vendor/owlCarousel/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="vendor/owlCarousel/css/owl.theme.default.min.css">
 	<!-- Custom fonts for this project -->
 	<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css">
 	<!-- Custom styles for this project -->
 	<link href="css/project.min.css" rel="stylesheet">
 </head>
@@ -50,7 +49,7 @@
 			<div class="col-lg-4">
 				<div class="review-item">
 					<div class="review-video">
-						<iframe data-loader="youtube" data-src="ME9ZEqj7Vm8" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe data-loader="youtube" data-src="zNvaiEuqQZs" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="review-author">
 						Роман
@@ -65,30 +64,67 @@
 			<div class="col-lg-4">
 				<div class="review-item">
 					<div class="review-video">
-						<iframe data-loader="youtube" data-src="ME9ZEqj7Vm8" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe data-loader="youtube" data-src="VbfR60GOsDQ" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="review-author">
-						Роман
+						Айман
 					</div>
 					<div class="review-desc">Выполнено для клиента:</div>
 					<div class="review-tag">
 						<div class="tag-item site">Сайт</div>
-						<div class="tag-item seo">SEO</div>
+						<div class="tag-item target">Таргет</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4">
 				<div class="review-item">
-					<div class="review-video">
-						<iframe data-loader="youtube" data-src="ME9ZEqj7Vm8" width="100%" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="review-img">
+						<a data-fancybox="reviews" href="img/reviews/review1.jpg" tabindex="0">
+							<img src="img/reviews/review1.jpg" alt="">
+						</a>
 					</div>
 					<div class="review-author">
-						Роман
+						Акмарал
 					</div>
 					<div class="review-desc">Выполнено для клиента:</div>
 					<div class="review-tag">
 						<div class="tag-item site">Сайт</div>
-						<div class="tag-item seo">SEO</div>
+						<div class="tag-item target">Таргет</div>
+						<div class="tag-item context">Контекст</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4">
+				<div class="review-item">
+					<div class="review-img">
+						<a data-fancybox="reviews" href="img/reviews/review2.jpg" tabindex="0">
+							<img src="img/reviews/review2.jpg" alt="">
+						</a>
+					</div>
+					<div class="review-author">
+						Рамиль
+					</div>
+					<div class="review-desc">Выполнено для клиента:</div>
+					<div class="review-tag">
+						<div class="tag-item site">Сайт</div>
+						<div class="tag-item target">Таргет</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4">
+				<div class="review-item">
+					<div class="review-img">
+						<a data-fancybox="reviews" href="img/reviews/review1.jpg" tabindex="0">
+							<img src="img/reviews/review1.jpg" alt="">
+						</a>
+					</div>
+					<div class="review-author">
+						Абылай
+					</div>
+					<div class="review-desc">Выполнено для клиента:</div>
+					<div class="review-tag">
+						<div class="tag-item site">Сайт</div>
+						<div class="tag-item target">Таргет</div>
 					</div>
 				</div>
 			</div>
@@ -130,16 +166,33 @@
 		</div>
 	</div>
 </div>
-
+<!-- Blueimp gallery -->
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls text-white">
+	<div class="slides"></div>
+	<h3 class="title"></h3>
+	<a class="prev">‹</a>
+	<a class="next">›</a>
+	<a class="close">×</a>
+	<a class="play-pause"></a>
+	<ol class="indicator"></ol>
+</div>
 <!-- Bootstrap core JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.lazy/1.7.1/jquery.lazy.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.lazy/1.7.1/plugins/jquery.lazy.youtube.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
 <!-- Custom scripts for this template -->
 <script src="js/project.min.js"></script>
 <script>
     $("iframe[data-src]").Lazy();
+
+    $('[data-fancybox="reviews"]').fancybox({
+        buttons : [
+            'zoom',
+            'close'
+        ]
+    });
 </script>
 </body>
 
