--- a/works.html
+++ b/works.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Кухонные гарнитуры в Алматы</title>
-	<meta name="description" content="Кухонные гарнитуры в Алматы">
+	<title>Интернет-маркетолог - Ерсултан Зада</title>
+	<meta name="description" content="Обо мне, мои работы, отзывы">
 	<meta http-equiv="cache-control" content="no-cache">
 	<meta http-equiv="expires" content="0">
 	<meta http-equiv="pragma" content="no-cache">
@@ -53,7 +53,7 @@
 							<img src="img/works/work1-main.jpg" alt="">
 						</div>
 						<div class="work-title">
-							Контракт на сумму 15 млн тг из бесплатной поисковой выдачи
+							Контракт на сумму 22 млн тг из бесплатной поисковой выдачи
 						</div>
 						<div class="work-desc">Ниша: Электромонтажные работы</div>
 						<div class="work-tag">
@@ -211,7 +211,7 @@
 				</div>
 				<div class="work-stat mb-0">
 					<div class="work-stat--item">
-						<span>19 млн.</span>
+						<span>28 млн.</span>
 						доход
 					</div>
 					<div class="work-stat--item">
@@ -252,7 +252,7 @@
 						На сегодняшний день с помощью органической выдачи сайта в поисковых системах (Гугл и Яндекс), компания стабильно
 						получает как и крупных, так и мелких клиентов. <br><br>
 						22 запроса из 27 находятся на первой странице поиска.<br><br>
-						С помощью ключевых слов, связанных с трансформаторной подстанцией на компанию вышел крупный клиент. Сумма сделки 15 млн тг.
+						С помощью ключевых слов, связанных с трансформаторной подстанцией на компанию вышел крупный клиент. Сумма сделки 22 млн тг.
 					</div>
 					<table>
 						<tbody><tr>
@@ -281,7 +281,7 @@
 						</tr>
 						<tr>
 							<td>Получено заказов на сумму</td>
-							<td>19 000 000 тг</td>
+							<td>28 000 000 тг</td>
 						</tr>
 						</tbody>
 					</table>
