--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 					<div class="career-item _po">
 						<div class="item-info">
 							<div>Webtech Studio</div>
-							<div>Product Owner</div>
+							<div>Ведущий маркетолог</div>
 						</div>
 						<div class="item-year">19 - 21</div>
 					</div>
@@ -173,7 +173,7 @@
 					<div class="career-item _po">
 						<div class="item-info">
 							<div>Webtech Studio</div>
-							<div>Product Owner</div>
+							<div>Ведущий маркетолог</div>
 						</div>
 						<div class="item-year">19 - 21</div>
 					</div>
