--- a/about.html
+++ b/about.html
@@ -16,6 +16,21 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 	<!-- Custom styles for this project -->
 	<link href="css/project.min.css" rel="stylesheet">
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(83887081, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/83887081" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 
 <body id="page-top">
@@ -60,7 +75,7 @@
 					Всегда слежу за трендами и ищу новые инструменты, чтобы заявка обходилась как можно дешевле. Ведь цена заявки растет с каждым годом.
 				</div>
 				<div class="about-text">
-					Прекрасный муж и отец. С детства занимаюсь спортом. Без вредных привычек.
+					Примерный муж и отец. Не могу без спорта. Нет вредных привычек.
 				</div>
 			</div>
 		</div>
